--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
   <div class="header">
     <button class="home-button" onclick="showHome()">
-      <img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\ホーム.png" alt="ホーム" />
+      <img src="ホーム.png" alt="ホーム" />
       <span data-i18n="home">ホーム</span>
     </button>
     <span id="header-title" data-i18n="appTitle">Train Talk</span>
@@ -328,21 +328,21 @@
 
   <div id="home-page" class="page active">
     <div class="grid-container">
-      <div class="grid-item" onclick="showChat()"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\会話.png" alt="会話" /><br><span data-i18n="chat">会話</span></div>
-      <div class="grid-item"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\フレンド.png" alt="フレンド" /><br><span data-i18n="friends">フレンド</span></div>
-      <div class="grid-item" onclick="showProfile()"><img id="profile-icon" src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\プロフィール.png" alt="プロフィール" /><br><span data-i18n="profile">プロフィール</span></div>
-      <div class="grid-item"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\通知.png" alt="通知" /><br><span data-i18n="notifications">通知</span></div>
-      <div class="grid-item" onclick="showSettings()"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\設定.png" alt="設定" /><br><span data-i18n="settings">設定</span></div>
-      <div class="grid-item" onclick="showAnnouncement()"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\お知らせ.png" alt="お知らせ" /><br><span data-i18n="announcements">お知らせ</span></div>
+      <div class="grid-item" onclick="showChat()"><img src="会話.png" alt="会話" /><br><span data-i18n="chat">会話</span></div>
+      <div class="grid-item"><img src="フレンド.png" alt="フレンド" /><br><span data-i18n="friends">フレンド</span></div>
+      <div class="grid-item" onclick="showProfile()"><img id="profile-icon" src="プロフィール.png" alt="プロフィール" /><br><span data-i18n="profile">プロフィール</span></div>
+      <div class="grid-item"><img src="通知.png" alt="通知" /><br><span data-i18n="notifications">通知</span></div>
+      <div class="grid-item" onclick="showSettings()"><img src="設定.png" alt="設定" /><br><span data-i18n="settings">設定</span></div>
+      <div class="grid-item" onclick="showAnnouncement()"><img src="お知らせ.png" alt="お知らせ" /><br><span data-i18n="announcements">お知らせ</span></div>
     </div>
   </div>
 
   <div id="chat-page" class="page">
     <div class="grid-container-2x2">
-      <div class="grid-item"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\趣味マッチング.png" alt="趣味マッチング" /><br><span data-i18n="hobbyMatching">趣味マッチング</span></div>
-      <div class="grid-item" onclick="openTrends()"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\トレンド.png" alt="トレンド" /><br><span data-i18n="trends">トレンド</span></div>
-      <div class="grid-item" onclick="showLocalTalk()"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\ローカルトーク.png" alt="ローカルトーク" /><br><span data-i18n="localTalk">ローカルトーク</span></div>
-      <div class="grid-item" onclick="showSearch()"><img src="c:\Users\ko_ta\OneDrive\画像\スクリーンショット\検索.png" alt="検索" /><br><span data-i18n="search">検索</span></div>
+      <div class="grid-item"><img src="趣味マッチング.png" alt="趣味マッチング" /><br><span data-i18n="hobbyMatching">趣味マッチング</span></div>
+      <div class="grid-item" onclick="openTrends()"><img src="トレンド.png" alt="トレンド" /><br><span data-i18n="trends">トレンド</span></div>
+      <div class="grid-item" onclick="showLocalTalk()"><img src="ローカルトーク.png" alt="ローカルトーク" /><br><span data-i18n="localTalk">ローカルトーク</span></div>
+      <div class="grid-item" onclick="showSearch()"><img src="検索.png" alt="検索" /><br><span data-i18n="search">検索</span></div>
     </div>
   </div>
 
