--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
   <div class="header">
     <button class="home-button" onclick="showHome()">
-      <img src="ホーム.png" alt="ホーム" />
+      <img src="images/ホーム.png" alt="ホーム" />
       <span data-i18n="home">ホーム</span>
     </button>
     <span id="header-title" data-i18n="appTitle">Train Talk</span>
